# socc

./: .env.example  .gitignore  .npmignore  CONTRIBUTING.md  README.md  SECURITY.md  SOC_Copilot_PRD_Fase2.md  SOC_Copilot_TODO.md  analise_ofensa.py  install-cli.sh  install.py  install.sh  mcp_server.py  package.json  pyproject.toml  requirements.txt  run.py  socc.mjs
.omx/: metrics.json
docs/: SOC_Copilot_GoLive_Checklist.md  advanced-setup.md  boundary-clean-room-harness-runtime.md  claude-code-port-analysis.md  conf.py  index.md  litellm-setup.md  non-technical-setup.md  prd-claude-code-harness-parity.md  prd-clean-room-harness-rewrite.md  prd-harness-evolution.md  prd-harness-wiring.md  prd-socc-copiloto-ia.md  prd-soccsizacao-openclaude.md  prd-soccsizacao-runtime-base.md  quick-start-mac-linux.md  quick-start-windows.md  requirements.txt  review-clean-room-harness-rewrite.md  session-bridge-clean-room-harness.md  task-lifecycle-clean-room-harness.md  todo-claude-code-harness-parity.md  todo-claude-code-integration.md  todo-clean-room-harness-rewrite.md  todo-harness-evolution.md  todo-harness-wiring.md  todo-implementacao-copiloto-ia.md  todo-repl-interface-source-rework.md  todo-soccsizacao-openclaude.md  todo-soccsizacao-runtime-base.md  ui-spec-claude-code-like-tui.md
scripts/: bootstrap-python.mjs  bootstrap-socc-soul.mjs  bootstrap-socc-soul.test.mjs  build.ts  grpc-cli.ts  no-telemetry-plugin.ts  provider-bootstrap.ts  provider-launch.ts  provider-recommend.ts  render-coverage-heatmap.ts  start-grpc.ts  system-check.ts
soc_copilot/: config.py  main.py  (+2 more)
(+1024 files in other folders)
