[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socc"
version = "0.1.0"
description = "SOC companion local runtime with CLI, gateway, and copilot integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "pytz",
    "requests",
    "python-dotenv",
    "aiofiles",
    "anthropic",
    "scikit-learn",
    "rapidfuzz",
    "fastmcp",
    "InquirerPy>=0.3.4",
]

[project.scripts]
socc = "socc.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["socc*", "soc_copilot*"]

[tool.setuptools.package-data]
soc_copilot = ["templates/*.html", "static/**/*"]
